fixed the about cards on mobile

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -66,39 +66,54 @@
     width: 50vw;
 }*/
 
-.header-paragraph {
+.namebox-text {
     text-align: center;
 }
 
 .namebox {
+    margin-top: 20px;
+    border-radius: 32px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     font-family: 'Lora';
-    padding: 7% 10%;
+    padding: 7% 7%;
     line-height: 1.5;
 }
 
-.header-paragraph h1 {
-    background-color: rgb(121, 121, 228);
+.namebox-text h1 {
+    margin-top: 15px;
+    margin-bottom: 0px;
     font-size: 1.5em;
 }
 
-.header-paragraph p {
-    background-color: rgb(47, 85, 72);
-    margin: 0;
+.namebox-text p {
+    margin-top: 0px;
+    margin-bottom: 20px;
 }
 
-.center-tri-segment {
+.namebox-links {
+    border-radius: 15px;
+    background-color: #4b4b4b;
+    align-items: center;
+    justify-content: space-around;
     display: flex;
-    align-content: flex-end;
-    justify-content: space-evenly;
     flex-wrap: wrap;
 }
 
+
+.namebox-links a {
+    font-family: 'Spectral';
+    width: 50%;
+    box-sizing: border-box;
+    text-decoration: none;
+}
+
 .pfp {
-    width: 256px;
+    width: 80%;
+    display: block;
+    margin: 0 auto;
     border-radius: 32px;
-    outline-color: lightgray;
-    outline-style: solid;
-    outline-width: 3px;
 }
 
 .sectionheader {
@@ -114,66 +129,3 @@
     font: 1.75em;
 }
 
-/* all styles for any screen larger than a phone go in here*/
-@media (min-width: 1028px) {
-    .page{
-        width: 80%;
-        max-width: 1248px;
-        
-    }
-
-    .textbox {
-        padding: 4% 7%;
-    }
-
-    .namebox {
-        padding: 4% 4%;
-    }
-    
-    .header-paragraph h1 {
-        font-size: 2.25em;
-    }
-
-    .collection {
-        justify-content: space-around;
-    }
-
-    .linkbox p {
-        font-size: .875em;
-    }
-
-    .footer div {
-        width: 45%;
-    }
-
-    .tableofcontents li {
-        margin-left: 10vw;
-        font-size: 2.25em;
-    }
-
-}
-
-@media (min-width: 1744px) {
-    .sidebar {
-        left: calc((100vw - 1248px) / 2 - 250px);
-        transition: 0s;
-        background-color: #111111;
-    }
-
-    .sidebar.open {
-        left: calc((100vw - 1248px) / 2 - 250px);
-    }
-
-    .openbtn {
-        color: #0A0A0A;
-        cursor: default;
-        transition: 0.3s;
-    }
-
-    .sidebar .closebtn {
-        color: #111111;
-        cursor: default;
-        background-color: transparent;
-        
-    }
-}
